--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,7 @@ docutils                      0.16
 dopamine-rl                   4.0.6
 duckdb                        0.7.1
 earthengine-api               0.1.350
+streamlit                     1.17.0
 easydict                      1.10
 ecos                          2.0.12
 editdistance                  0.6.2
